--- a/back-end/encentre-api/src/main/resources/application.properties
+++ b/back-end/encentre-api/src/main/resources/application.properties
@@ -1,4 +1,1 @@
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://article-db:3306/article
-spring.datasource.username=root
-spring.datasource.password=example
+myapp.app-name=Demo Spring
