--- a/back-end/encentre-api/src/integrationTest/resources/application_test.properties
+++ b/back-end/encentre-api/src/integrationTest/resources/application_test.properties
@@ -1,6 +1,10 @@
+
 # Jdbc connection to postgres db
 spring.datasource.url=jdbc:postgresql://localhost:5432/test
 spring.datasource.username=test
 spring.datasource.password=test
 spring.datasource.maximum-pool-size=3
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.datasource.initialization-mode=always
+spring.datasource.initialize=true
