--- a/back-end/encentre-api/build.gradle
+++ b/back-end/encentre-api/build.gradle
@@ -34,6 +34,8 @@ dependencies {
 	compile "org.postgresql:postgresql:42.2.2"
 	compile "com.zaxxer:HikariCP:2.6.1"
 
+	compile "ru.yandex.qatools.embed:postgresql-embedded:1.15"
+
 }
 
 configurations {
@@ -53,7 +55,7 @@ sourceSets {
 }
 
 task integrationTest(type: Test) {
-	testClassesDirs = sourceSets.integrationTest.output.classesDirs
+	testClassesDir = sourceSets.integrationTest.output.classesDir
 	classpath = sourceSets.integrationTest.runtimeClasspath
 	outputs.upToDateWhen { false }
 }
