--- a/back-end/encentre-api/build.gradle
+++ b/back-end/encentre-api/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 
 	compile "org.postgresql:postgresql:42.2.2"
 	compile "com.zaxxer:HikariCP:2.6.1"
+	compile "org.apache.commons:commons-dbcp2:2.0"
 
 	compile "ru.yandex.qatools.embed:postgresql-embedded:1.15"
 
