--- a/back-end/encentre-api/src/main/resources/application.properties
+++ b/back-end/encentre-api/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.username=test
 spring.datasource.password=test
 spring.datasource.maximum-pool-size=3
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.datasource.schema=classpath:db/schema.sql
+spring.datasource.data=classpath:db/data.sql
+spring.datasource.initialization-mode=always
