--- a/back-end/encentre-api/build.gradle
+++ b/back-end/encentre-api/build.gradle
@@ -26,8 +26,8 @@ repositories {
 
 
 dependencies {
-	compile 'org.springframework.boot:spring-boot-starter-web'
-	compile("org.springframework.boot:spring-boot-starter-jdbc")
+	compile ('org.springframework.boot:spring-boot-starter-web')
+	compile("org.springframework.boot:spring-boot-starter-data-jpa")
 	testCompile 'org.springframework.boot:spring-boot-starter-test'
 	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.16.10'
 
@@ -36,7 +36,6 @@ dependencies {
 	compile "org.apache.commons:commons-dbcp2:2.0"
 
 	compile "ru.yandex.qatools.embed:postgresql-embedded:1.15"
-
 }
 
 configurations {
