--- a/back-end/encentre-api/src/main/resources/application.properties
+++ b/back-end/encentre-api/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# Jdbc connection to postgres db
+# Datasource config
 spring.datasource.url=jdbc:postgresql://localhost:5432/test
 spring.datasource.username=test
 spring.datasource.password=test
@@ -8,3 +8,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.schema=classpath:db/schema.sql
 spring.datasource.data=classpath:db/data.sql
 spring.datasource.initialization-mode=always
+
+# Hibernate config
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
