--- a/back-end/encentre-api/src/main/resources/application.properties
+++ b/back-end/encentre-api/src/main/resources/application.properties
@@ -10,6 +10,5 @@ spring.datasource.data=classpath:db/data.sql
 spring.datasource.initialization-mode=always
 
 # Hibernate config
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+# Hides HHH000424: Disabling contextual LOB creation as createClob() method threw error
+logging.level.org.hibernate.engine.jdbc.env.internal.LobCreatorBuilderImpl: WARN
