--- a/back-end/encentre-api/src/main/resources/application.properties
+++ b/back-end/encentre-api/src/main/resources/application.properties
@@ -6,9 +6,11 @@ spring.datasource.maximum-pool-size=3
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.datasource.schema=classpath:db/schema.sql
-spring.datasource.data=classpath:db/data.sql
+#spring.datasource.data=classpath:db/data.sql
 spring.datasource.initialization-mode=always
 
 # Hibernate config
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto=create-drop
 # Hides HHH000424: Disabling contextual LOB creation as createClob() method threw error
 logging.level.org.hibernate.engine.jdbc.env.internal.LobCreatorBuilderImpl: WARN
